[gd_scene format=3]

[ext_resource type="Script" path="res://scenes/vehicles/jet.gd" id="1_script"]
[ext_resource type="Script" path="res://scenes/debug/flight_debug.gd" id="2_debug"]
[ext_resource type="Script" path="res://scenes/vehicles/cockpit.gd" id="3_cockpit"]
[ext_resource type="Script" path="res://scenes/vehicles/engine_audio.gd" id="4_audio"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_body"]
radius = 0.55
height = 16

[sub_resource type="BoxShape3D" id="BoxShape3D_wing_left"]
size = Vector3(5, 0.12, 2.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_wing_right"]
size = Vector3(5, 0.12, 2.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_htail"]
size = Vector3(3.5, 0.08, 0.8)

[sub_resource type="BoxShape3D" id="BoxShape3D_vtail"]
size = Vector3(0.08, 2.5, 1.4)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_wheel"]
friction = 0.3
bounce = 0.1

[sub_resource type="SphereShape3D" id="SphereShape3D_wheel"]
radius = 0.45

[sub_resource type="BoxMesh" id="BoxMesh_fuselage_front"]
size = Vector3(1.0, 0.8, 4.5)

[sub_resource type="BoxMesh" id="BoxMesh_fuselage_rear"]
size = Vector3(1.0, 0.8, 8.5)

[sub_resource type="BoxMesh" id="BoxMesh_cockpit_side_wall"]
size = Vector3(0.08, 0.8, 3.0)

[sub_resource type="BoxMesh" id="BoxMesh_cockpit_floor"]
size = Vector3(0.84, 0.08, 3.0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_body"]
albedo_color = Color(0.6, 0.6, 0.65, 1)
metallic = 0.6
roughness = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_wing_left"]
size = Vector3(5, 0.12, 2.5)

[sub_resource type="BoxMesh" id="BoxMesh_wing_right"]
size = Vector3(5, 0.12, 2.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wing"]
albedo_color = Color(0.65, 0.65, 0.7, 1)
metallic = 0.5
roughness = 0.4

[sub_resource type="BoxMesh" id="BoxMesh_htail"]
size = Vector3(3.5, 0.08, 0.8)

[sub_resource type="BoxMesh" id="BoxMesh_vtail"]
size = Vector3(0.08, 2.5, 1.4)

[sub_resource type="BoxMesh" id="BoxMesh_nose"]
size = Vector3(0.7, 0.6, 3.0)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nose"]
radius = 0.4
height = 3

[sub_resource type="CylinderMesh" id="CylinderMesh_exhaust"]
top_radius = 0.32
bottom_radius = 0.38
height = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_exhaust"]
albedo_color = Color(0.25, 0.25, 0.3, 1)
metallic = 0.8
roughness = 0.2
emission_enabled = true
emission = Color(1, 0.5, 0.1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_intake"]
size = Vector3(0.7, 0.6, 0.8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_intake"]
albedo_color = Color(0.15, 0.15, 0.18, 1)
metallic = 0.3
roughness = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_aileron"]
size = Vector3(1.8, 0.06, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_elevator"]
size = Vector3(1.5, 0.05, 0.35)

[sub_resource type="BoxMesh" id="BoxMesh_rudder"]
size = Vector3(0.05, 1.8, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_control"]
albedo_color = Color(0.5, 0.5, 0.55, 1)
metallic = 0.4
roughness = 0.5

[sub_resource type="CylinderMesh" id="CylinderMesh_wheel"]
top_radius = 0.35
bottom_radius = 0.35
height = 0.12

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wheel"]
albedo_color = Color(0.1, 0.1, 0.1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_strut"]
size = Vector3(0.08, 0.9, 0.08)

[sub_resource type="BoxMesh" id="BoxMesh_strut_long"]
size = Vector3(0.08, 1.5, 0.08)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_strut"]
albedo_color = Color(0.25, 0.25, 0.25, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_canopy_glass"]
transparency = 1
albedo_color = Color(0.8, 0.85, 0.7, 0.18)
metallic = 0.5
roughness = 0.05
cull_mode = 0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_canopy"]
radius = 0.55
height = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dashboard"]
albedo_color = Color(0.12, 0.12, 0.15, 1)
metallic = 0.1
roughness = 0.9

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cockpit_frame"]
albedo_color = Color(0.2, 0.2, 0.23, 1)
metallic = 0.3
roughness = 0.7

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cockpit_accent"]
albedo_color = Color(0.06, 0.06, 0.06, 1)
metallic = 0.2
roughness = 0.8

[sub_resource type="BoxMesh" id="BoxMesh_dashboard"]
size = Vector3(1.0, 0.35, 0.25)

[sub_resource type="BoxMesh" id="BoxMesh_dash_coaming"]
size = Vector3(1.1, 0.04, 0.15)

[sub_resource type="BoxMesh" id="BoxMesh_cockpit_frame"]
size = Vector3(0.05, 0.6, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_top_frame"]
size = Vector3(1.1, 0.04, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_floor_panel"]
size = Vector3(0.8, 0.03, 1.0)

[sub_resource type="CylinderMesh" id="CylinderMesh_stick"]
top_radius = 0.012
bottom_radius = 0.018
height = 0.22

[sub_resource type="BoxMesh" id="BoxMesh_grip"]
size = Vector3(0.07, 0.025, 0.035)

[sub_resource type="BoxMesh" id="BoxMesh_throttle_lever"]
size = Vector3(0.025, 0.09, 0.025)

[sub_resource type="BoxShape3D" id="BoxShape3D_joystick_hit"]
size = Vector3(0.1, 0.25, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_throttle_hit"]
size = Vector3(0.06, 0.12, 0.06)

[node name="Jet" type="RigidBody3D"]
collision_layer = 4
collision_mask = 5
mass = 3000.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0, -1.5)
physics_material_override = SubResource("PhysicsMaterial_wheel")
continuous_cd = true
script = ExtResource("1_script")

[node name="BodyCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, -1)
shape = SubResource("CapsuleShape3D_body")

[node name="LeftWingCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0.1, 1)
shape = SubResource("BoxShape3D_wing_left")

[node name="RightWingCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.1, 1)
shape = SubResource("BoxShape3D_wing_right")

[node name="HTailCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 6.5)
shape = SubResource("BoxShape3D_htail")

[node name="VTailCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 6.3)
shape = SubResource("BoxShape3D_vtail")

[node name="FrontWheelCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0, -5.5)
shape = SubResource("SphereShape3D_wheel")

[node name="LeftWheelCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8, -1.3, 0.5)
shape = SubResource("SphereShape3D_wheel")

[node name="RightWheelCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.8, -1.3, 0.5)
shape = SubResource("SphereShape3D_wheel")

[node name="Fuselage" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6.75)
mesh = SubResource("BoxMesh_fuselage_front")
surface_material_override/0 = SubResource("StandardMaterial3D_body")

[node name="RearFuselage" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.75)
mesh = SubResource("BoxMesh_fuselage_rear")
surface_material_override/0 = SubResource("StandardMaterial3D_body")

[node name="CockpitLeftWall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.46, 0, -3.0)
mesh = SubResource("BoxMesh_cockpit_side_wall")
surface_material_override/0 = SubResource("StandardMaterial3D_body")

[node name="CockpitRightWall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.46, 0, -3.0)
mesh = SubResource("BoxMesh_cockpit_side_wall")
surface_material_override/0 = SubResource("StandardMaterial3D_body")

[node name="CockpitFloorPanel" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.36, -3.0)
mesh = SubResource("BoxMesh_cockpit_floor")
surface_material_override/0 = SubResource("StandardMaterial3D_body")

[node name="LeftWing" type="MeshInstance3D" parent="."]
transform = Transform3D(0.966, 0, 0.259, 0, 1, 0, -0.259, 0, 0.966, -2.5, 0.1, 1)
mesh = SubResource("BoxMesh_wing_left")
surface_material_override/0 = SubResource("StandardMaterial3D_wing")

[node name="LeftAileron" type="MeshInstance3D" parent="LeftWing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 0, 1.2)
mesh = SubResource("BoxMesh_aileron")
surface_material_override/0 = SubResource("StandardMaterial3D_control")

[node name="RightWing" type="MeshInstance3D" parent="."]
transform = Transform3D(0.966, 0, -0.259, 0, 1, 0, 0.259, 0, 0.966, 2.5, 0.1, 1)
mesh = SubResource("BoxMesh_wing_right")
surface_material_override/0 = SubResource("StandardMaterial3D_wing")

[node name="RightAileron" type="MeshInstance3D" parent="RightWing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 0, 1.2)
mesh = SubResource("BoxMesh_aileron")
surface_material_override/0 = SubResource("StandardMaterial3D_control")

[node name="HorizontalTail" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 6.5)
mesh = SubResource("BoxMesh_htail")
surface_material_override/0 = SubResource("StandardMaterial3D_wing")

[node name="LeftElevator" type="MeshInstance3D" parent="HorizontalTail"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.9, 0, 0.6)
mesh = SubResource("BoxMesh_elevator")
surface_material_override/0 = SubResource("StandardMaterial3D_control")

[node name="RightElevator" type="MeshInstance3D" parent="HorizontalTail"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.9, 0, 0.6)
mesh = SubResource("BoxMesh_elevator")
surface_material_override/0 = SubResource("StandardMaterial3D_control")

[node name="VerticalTail" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 6.3)
mesh = SubResource("BoxMesh_vtail")
surface_material_override/0 = SubResource("StandardMaterial3D_wing")

[node name="Rudder" type="MeshInstance3D" parent="VerticalTail"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0.9)
mesh = SubResource("BoxMesh_rudder")
surface_material_override/0 = SubResource("StandardMaterial3D_control")

[node name="Nose" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)
mesh = SubResource("BoxMesh_nose")
surface_material_override/0 = SubResource("StandardMaterial3D_body")

[node name="NoseCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, -10)
shape = SubResource("CapsuleShape3D_nose")

[node name="Intake" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, -7.5)
mesh = SubResource("BoxMesh_intake")
surface_material_override/0 = SubResource("StandardMaterial3D_intake")

[node name="Exhaust" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8.8)
mesh = SubResource("BoxMesh_exhaust")
surface_material_override/0 = SubResource("StandardMaterial3D_exhaust")

[node name="LandingGear" type="Node3D" parent="."]

[node name="FrontGear" type="Node3D" parent="LandingGear"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, -5.5)

[node name="Strut" type="MeshInstance3D" parent="LandingGear/FrontGear"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, 0)
mesh = SubResource("BoxMesh_strut")
surface_material_override/0 = SubResource("StandardMaterial3D_strut")

[node name="Wheel" type="MeshInstance3D" parent="LandingGear/FrontGear"]
transform = Transform3D(0, 1, 0, -1, 0, 0, 0, 0, 1, 0, -0.9, 0)
mesh = SubResource("CylinderMesh_wheel")
surface_material_override/0 = SubResource("StandardMaterial3D_wheel")

[node name="LeftGear" type="Node3D" parent="LandingGear"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8, 0.1, 0.5)

[node name="Strut" type="MeshInstance3D" parent="LandingGear/LeftGear"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.75, 0)
mesh = SubResource("BoxMesh_strut_long")
surface_material_override/0 = SubResource("StandardMaterial3D_strut")

[node name="Wheel" type="MeshInstance3D" parent="LandingGear/LeftGear"]
transform = Transform3D(0, 1, 0, -1, 0, 0, 0, 0, 1, 0, -1.5, 0)
mesh = SubResource("CylinderMesh_wheel")
surface_material_override/0 = SubResource("StandardMaterial3D_wheel")

[node name="RightGear" type="Node3D" parent="LandingGear"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.8, 0.1, 0.5)

[node name="Strut" type="MeshInstance3D" parent="LandingGear/RightGear"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.75, 0)
mesh = SubResource("BoxMesh_strut_long")
surface_material_override/0 = SubResource("StandardMaterial3D_strut")

[node name="Wheel" type="MeshInstance3D" parent="LandingGear/RightGear"]
transform = Transform3D(0, 1, 0, -1, 0, 0, 0, 0, 1, 0, -1.5, 0)
mesh = SubResource("CylinderMesh_wheel")
surface_material_override/0 = SubResource("StandardMaterial3D_wheel")

[node name="Canopy" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0.7, -3.3)
mesh = SubResource("CapsuleMesh_canopy")
surface_material_override/0 = SubResource("StandardMaterial3D_canopy_glass")

[node name="Cockpit" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, -3)
script = ExtResource("3_cockpit")

[node name="Dashboard" type="MeshInstance3D" parent="Cockpit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15, -0.85)
mesh = SubResource("BoxMesh_dashboard")
surface_material_override/0 = SubResource("StandardMaterial3D_dashboard")

[node name="DashCoaming" type="MeshInstance3D" parent="Cockpit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.08, -0.8)
mesh = SubResource("BoxMesh_dash_coaming")
surface_material_override/0 = SubResource("StandardMaterial3D_cockpit_frame")

[node name="LeftFrame" type="MeshInstance3D" parent="Cockpit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.45, 0.25, -0.45)
mesh = SubResource("BoxMesh_cockpit_frame")
surface_material_override/0 = SubResource("StandardMaterial3D_cockpit_frame")

[node name="RightFrame" type="MeshInstance3D" parent="Cockpit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.45, 0.25, -0.45)
mesh = SubResource("BoxMesh_cockpit_frame")
surface_material_override/0 = SubResource("StandardMaterial3D_cockpit_frame")

[node name="TopFrame" type="MeshInstance3D" parent="Cockpit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, -0.45)
mesh = SubResource("BoxMesh_top_frame")
surface_material_override/0 = SubResource("StandardMaterial3D_cockpit_frame")

[node name="FloorPanel" type="MeshInstance3D" parent="Cockpit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, -0.25)
mesh = SubResource("BoxMesh_floor_panel")
surface_material_override/0 = SubResource("StandardMaterial3D_dashboard")

[node name="Joystick" type="Node3D" parent="Cockpit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, -0.45)

[node name="Stick" type="MeshInstance3D" parent="Cockpit/Joystick"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.11, 0)
mesh = SubResource("CylinderMesh_stick")
surface_material_override/0 = SubResource("StandardMaterial3D_cockpit_accent")

[node name="Grip" type="MeshInstance3D" parent="Cockpit/Joystick"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.23, 0)
mesh = SubResource("BoxMesh_grip")
surface_material_override/0 = SubResource("StandardMaterial3D_cockpit_accent")

[node name="JoystickArea" type="Area3D" parent="Cockpit/Joystick"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.12, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cockpit/Joystick/JoystickArea"]
shape = SubResource("BoxShape3D_joystick_hit")

[node name="ThrottleLever" type="Node3D" parent="Cockpit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.35, -0.1, -0.5)

[node name="Lever" type="MeshInstance3D" parent="Cockpit/ThrottleLever"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.045, 0)
mesh = SubResource("BoxMesh_throttle_lever")
surface_material_override/0 = SubResource("StandardMaterial3D_cockpit_accent")

[node name="ThrottleArea" type="Area3D" parent="Cockpit/ThrottleLever"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.045, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cockpit/ThrottleLever/ThrottleArea"]
shape = SubResource("BoxShape3D_throttle_hit")

[node name="Instruments" type="Node3D" parent="Cockpit"]

[node name="AirspeedLabel" type="Label3D" parent="Cockpit/Instruments"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0, -0.72)
pixel_size = 0.002
font_size = 14
outline_size = 4
modulate = Color(0.3, 1, 0.3, 1)
outline_modulate = Color(0, 0.1, 0, 1)
text = "  0 KTS"

[node name="AltimeterLabel" type="Label3D" parent="Cockpit/Instruments"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0, -0.72)
pixel_size = 0.002
font_size = 14
outline_size = 4
modulate = Color(0.3, 1, 0.3, 1)
outline_modulate = Color(0, 0.1, 0, 1)
text = "    0 FT"

[node name="HeadingLabel" type="Label3D" parent="Cockpit/Instruments"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.72)
pixel_size = 0.002
font_size = 14
outline_size = 4
modulate = Color(0.3, 1, 0.3, 1)
outline_modulate = Color(0, 0.1, 0, 1)
text = "HDG 000"

[node name="VSILabel" type="Label3D" parent="Cockpit/Instruments"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, -0.12, -0.72)
pixel_size = 0.002
font_size = 12
outline_size = 3
modulate = Color(0.3, 1, 0.3, 1)
outline_modulate = Color(0, 0.1, 0, 1)
text = "VS +0"

[node name="AoALabel" type="Label3D" parent="Cockpit/Instruments"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, -0.12, -0.72)
pixel_size = 0.002
font_size = 12
outline_size = 3
modulate = Color(0.3, 1, 0.3, 1)
outline_modulate = Color(0, 0.1, 0, 1)
text = "AOA +0.0"

[node name="ThrottleLabel" type="Label3D" parent="Cockpit/Instruments"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.18, -0.12, -0.72)
pixel_size = 0.002
font_size = 12
outline_size = 3
modulate = Color(0.3, 1, 0.3, 1)
outline_modulate = Color(0, 0.1, 0, 1)
text = "THR   0%"

[node name="GearLabel" type="Label3D" parent="Cockpit/Instruments"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35, -0.12, -0.72)
pixel_size = 0.002
font_size = 12
outline_size = 3
modulate = Color(0, 1, 0, 1)
outline_modulate = Color(0, 0.1, 0, 1)
text = "GEAR DN"

[node name="FlapsLabel" type="Label3D" parent="Cockpit/Instruments"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, -0.22, -0.72)
pixel_size = 0.002
font_size = 12
outline_size = 3
modulate = Color(0.3, 1, 0.3, 1)
outline_modulate = Color(0, 0.1, 0, 1)
text = "FLAP  0"

[node name="StallWarning" type="Label3D" parent="Cockpit/Instruments"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, -0.22, -0.72)
pixel_size = 0.003
font_size = 18
outline_size = 6
modulate = Color(1, 0.1, 0.1, 1)
outline_modulate = Color(0.3, 0, 0, 1)
text = "STALL"
visible = false

[node name="CockpitCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0, -3)
fov = 75.0

[node name="ThirdPersonCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 30)
fov = 70.0

[node name="ExitPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)

[node name="EngineAudio" type="AudioStreamPlayer3D" parent="."]
script = ExtResource("4_audio")

[node name="DebugDraw" type="Node3D" parent="."]
script = ExtResource("2_debug")
